
[project]
name = "CrawlFlow"
version = "0.0.9"
authors = [
  { name="Amirmahdi Mohammadi", email="mohamadi.mahdi.6@gmail.com" },
]
description = "An assistant for web crawling"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/am-mohammadi/CrawlFlow"
